--- a/lang/de_DE.po
+++ b/lang/de_DE.po
@@ -1,134 +1,138 @@
-# Copyright (C) 2013 
+# Copyright (C) 2012 
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
-"Project-Id-Version:  \n"
+"Project-Id-Version: v1.4.7\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/buddypress-xprofile-custom-"
 "fields-type\n"
 "POT-Creation-Date: 2013-01-14 11:04:55+00:00\n"
+"PO-Revision-Date: 2013-01-14 12:28+0100\n"
+"Last-Translator: Thorsten <thorsten.wollenhoefer@googlemail.com>\n"
+"Language-Team: Thorsten Wollenhöfer <thorsten.wollenhoefer@gmail.com>\n"
+"Language: de_DE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2013-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: bp-xprofile-custom-fields-type.php:73
 #: bp-xprofile-custom-fields-type.php:295
 msgid "http://yourwebsite.com"
-msgstr ""
+msgstr "http://yourwebsite.com"
 
 #: bp-xprofile-custom-fields-type.php:78
 #: bp-xprofile-custom-fields-type.php:287
 msgid "example@mail.com"
-msgstr ""
+msgstr "example@mail.com"
 
 #: bp-xprofile-custom-fields-type.php:137
 #: bp-xprofile-custom-fields-type.php:247
 msgid "January"
-msgstr ""
+msgstr "Januar"
 
 #: bp-xprofile-custom-fields-type.php:138
 #: bp-xprofile-custom-fields-type.php:248
 msgid "February"
-msgstr ""
+msgstr "Februar"
 
 #: bp-xprofile-custom-fields-type.php:139
 #: bp-xprofile-custom-fields-type.php:249
 msgid "March"
-msgstr ""
+msgstr "M&auml;rz"
 
 #: bp-xprofile-custom-fields-type.php:140
 #: bp-xprofile-custom-fields-type.php:250
 msgid "April"
-msgstr ""
+msgstr "April"
 
 #: bp-xprofile-custom-fields-type.php:141
 #: bp-xprofile-custom-fields-type.php:251
 msgid "May"
-msgstr ""
+msgstr "Mai"
 
 #: bp-xprofile-custom-fields-type.php:142
 #: bp-xprofile-custom-fields-type.php:252
 msgid "June"
-msgstr ""
+msgstr "Juni"
 
 #: bp-xprofile-custom-fields-type.php:143
 #: bp-xprofile-custom-fields-type.php:253
 msgid "July"
-msgstr ""
+msgstr "Juli"
 
 #: bp-xprofile-custom-fields-type.php:144
 #: bp-xprofile-custom-fields-type.php:254
 msgid "August"
-msgstr ""
+msgstr "August"
 
 #: bp-xprofile-custom-fields-type.php:145
 #: bp-xprofile-custom-fields-type.php:255
 msgid "September"
-msgstr ""
+msgstr "September"
 
 #: bp-xprofile-custom-fields-type.php:146
 #: bp-xprofile-custom-fields-type.php:256
 msgid "October"
-msgstr ""
+msgstr "Oktober"
 
 #: bp-xprofile-custom-fields-type.php:147
 #: bp-xprofile-custom-fields-type.php:257
 msgid "November"
-msgstr ""
+msgstr "November"
 
 #: bp-xprofile-custom-fields-type.php:148
 #: bp-xprofile-custom-fields-type.php:258
 msgid "December"
-msgstr ""
+msgstr "Dezember"
 
 #: bp-xprofile-custom-fields-type.php:166
 msgid "Field type unrecognized"
-msgstr ""
+msgstr "Feldtyp nicht erkannt"
 
 #: bp-xprofile-custom-fields-type.php:326
 msgid "Select..."
-msgstr ""
+msgstr "W&auml;hlen Sie..."
 
 #: bp-xprofile-custom-fields-type.php:619
 msgid "Birthdate"
-msgstr ""
+msgstr "Geburtstag"
 
 #: bp-xprofile-custom-fields-type.php:620
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: bp-xprofile-custom-fields-type.php:621
 msgid "Website"
-msgstr ""
+msgstr "Website"
 
 #: bp-xprofile-custom-fields-type.php:622
 msgid "Datepicker"
-msgstr ""
+msgstr "Datumsauswahl 2"
 
 #: bp-xprofile-custom-fields-type.php:623
 msgid "Custom Post Type Selector"
-msgstr ""
+msgstr "Benutzerdefinierter Post Typ Selector"
 
 #: bp-xprofile-custom-fields-type.php:624
 msgid "Custom Post Type Multiselector"
-msgstr ""
+msgstr "Benutzerdefinierter Post Tyo Multiselector"
 
 #: bp-xprofile-custom-fields-type.php:697
 #: bp-xprofile-custom-fields-type.php:728
 msgid "Please, select custom post type"
-msgstr ""
+msgstr "Bitte w&auml;hlen Sie einen benutzerdefinierten Post Typ"
 
 #: bp-xprofile-custom-fields-type.php:699
 #: bp-xprofile-custom-fields-type.php:730
 msgid "Custom Post Type:"
-msgstr ""
+msgstr "Benutzerdefinierter Post Typ:"
 
 #: bp-xprofile-custom-fields-type.php:754
 msgid "Show age (hide birthdate)"
-msgstr ""
+msgstr "Zeige das Alter (verstecke den Geburtstag)"
 
 #: bp-xprofile-custom-fields-type.php:756
 msgid "Check this if you want to show age instead of birthdate:"
 msgstr ""
+"Bitte markieren, wenn Sie das Alter in Jahren anstelle des Geburtsdatums "
+"anzeigen m&ouml;chten:"
